# chimera

./: .clang-format  .gitignore  .gitmodules  README.md  verible-verilog-format
10k_programs/: 1_gram_verilog_file_1.v  1_gram_verilog_file_10.v  1_gram_verilog_file_1000.v  1_gram_verilog_file_1001.v  1_gram_verilog_file_1002.v  1_gram_verilog_file_1003.v  1_gram_verilog_file_1005.v  1_gram_verilog_file_1006.v  1_gram_verilog_file_1007.v  1_gram_verilog_file_101.v  1_gram_verilog_file_1011.v  1_gram_verilog_file_1012.v  1_gram_verilog_file_1015.v  1_gram_verilog_file_1016.v  1_gram_verilog_file_1017.v  1_gram_verilog_file_1018.v  1_gram_verilog_file_1019.v  1_gram_verilog_file_102.v  1_gram_verilog_file_1020.v  1_gram_verilog_file_1022.v  1_gram_verilog_file_1024.v  1_gram_verilog_file_1026.v  1_gram_verilog_file_1028.v  1_gram_verilog_file_1030.v  1_gram_verilog_file_1031.v  1_gram_verilog_file_1035.v  1_gram_verilog_file_1036.v  1_gram_verilog_file_104.v  1_gram_verilog_file_1040.v  1_gram_verilog_file_1041.v  1_gram_verilog_file_1043.v  1_gram_verilog_file_1044.v  1_gram_verilog_file_1046.v  1_gram_verilog_file_1047.v  1_gram_verilog_file_1049.v  1_gram_verilog_file_105.v  1_gram_verilog_file_1050.v  1_gram_verilog_file_1053.v  1_gram_verilog_file_1056.v  1_gram_verilog_file_1057.v  (+5412 more)
chigen_programs/: README.md
coverage/: README.md
database/: 01-05-24_dds.v  02-052-2024_note2dds_1st_gen.v  02-052-2024_tform_wave.v  10003_ModelSim-IntelFPGA_Demultiplexers_1to8DeMux_dataflow_modelling.v  10009_ModelSim-IntelFPGA_FullAdder_test_bench.v  10010_ModelSim-IntelFPGA_FullSubtractor_behavioural_modelling.v  10013_ModelSim-IntelFPGA_FullSubtractor_test_bench.v  10017_ModelSim-IntelFPGA_HalfAdder_test_bench.v  (+45634 more)
json/: 1gram.json  (+34 more)
src/: AST.cpp  AST.h  CMakeLists.txt  Chimera.cpp  CodeGenVisitor.cpp  CodeGenVisitor.h  ConstantsReplacerVisitor.cpp  ConstantsReplacerVisitor.h  DOTGenVisitor.cpp  DOTGenVisitor.h  Functions.h  IdentifierRenamingVisitor.cpp  IdentifierRenamingVisitor.h  LivenessVisitor.cpp  LivenessVisitor.h  README.md  ReachingDefs.cpp  ReachingDefs.h  TypeInference.cpp  TypeInference.h  Visitor.cpp  Visitor.h
(+173990 files in other folders)
